Bug 1853920 - [1/2] cleanup: merge function implementations  r=win-reviewers,mhowell

`internal::ArgStrLen` and `internal::ArgToString` must behave
identically. Merge them into a common implementation function to ensure
this.

Additionally, use `size_t` rather than `int` as an intermediate data
type where appropriate.

No functional changes.

Differential Revision: https://phabricator.services.mozilla.com/D191127